Quorum3/Library/Tests/Templating/Fail/PassIntegerTakesBoolean_4.quorum
class main
    action main
        Test<boolean> something
        something:doSomething(5)
    end
end